tests/ui/infinite_loop.stderr
error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:14:11
   |
14 |     while y < 10 {
   |           ^^^^^^
   |
   = note: #[deny(while_immutable_condition)] on by default

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:19:11
   |
19 |     while y < 10 && x < 3 {
   |           ^^^^^^^^^^^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:26:11
   |
26 |     while !cond {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:64:11
   |
64 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:69:11
   |
69 |     while i < 3 && j > 0 {
   |           ^^^^^^^^^^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:73:11
   |
73 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:88:11
   |
88 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:93:11
   |
93 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
   --> $DIR/infinite_loop.rs:156:15
    |
156 |         while self.count < n {
    |               ^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

